syntax = "proto3";
package paymentsapi;
import "google/api/empty.proto";
option go_package = "gitlab.ozon.dev/NStegura/homework-4/payments/api";


service PaymentsApi {

  rpc CreatePayment(OrderId) returns (Id) {}

  rpc GetPaymentByOrderID(OrderId) returns (Payment) {}

  rpc UpdatePaymentStatus(PayStatus) returns (google.protobuf.Empty) {}

  rpc GetPing(google.protobuf.Empty) returns (Pong) {}
}

message Id {
  int64 id = 1;
}

message OrderId {
  int64 order_id = 1;
}

message Payment {
  int64 pay_id = 1;
  int64 order_id = 2;
  bool status = 3;
}

message PayStatus {
  int64 order_id = 1;
  bool status = 2;
}

message Pong {
  bool pong = 1;
}
